# class2_17-03-2024

fast-api-class2/: pyproject.toml
fast-api-class2/fastapiclass2/: main.py
