[tool.poetry]
name = "fastapiclass2"
version = "0.1.0"
description = ""
authors = ["Abdul Basit <bbasitkdfbgvb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlmodel = "^0.0.16"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
